--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="bizdsnlab" content="비즈니스디자인연구소,bizdsnlab" />
     <link rel="shortcut icon" href="/favicon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
