--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="bizdsnlab" content="비즈니스디자인연구소,bizdsnlab" />
+    <meta name="비즈니스디자인연구소" content="비즈니스디자인연구소,bizdsnlab" />
+    <meta property="og:title" content="비즈니스디자인연구소">
     <link rel="shortcut icon" href="/favicon.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
