--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="비즈니스디자인연구소" content="비즈니스디자인연구소,bizdsnlab" />
     <meta property="og:title" content="비즈니스디자인연구소">
     <link rel="shortcut icon" href="/favicon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>비즈니스디자인연구소</title>
   </head>
   <body>
     <noscript>
